--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world</h1>
-    <div></div>
+    
+    <div id="root">
+    </div>
+    <script>
+        const heading = document.createElement("h1");
+        heading.innerHTML = "hello world";
+
+        const root = document.getElementById("root");
+        root.appendChild(heading);
+    </script>
 </body>
 </html>
